# linch-docx-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: api-design.md  architecture.md  error-handling.md  opc-layer.md  roundtrip.md  xml-mapping.md
examples/: demo.rs
src/: error.rs  lib.rs  units.rs
src/document/: body.rs  comments.rs  footnotes.rs  header_footer.rs  image.rs  loaders.rs  mod.rs  numbering.rs  paragraph.rs  properties.rs  run.rs  section.rs  table.rs  template.rs  text_ops.rs  xml_ops.rs
src/document/numbering/: abstract_num.rs  level.rs  mod.rs  num.rs  types.rs
src/document/paragraph/: mod.rs  properties.rs
src/document/styles/: mod.rs  types.rs
src/document/table/: builder.rs  cell.rs  mod.rs  row.rs  types.rs
src/opc/: content_types.rs  mod.rs  package.rs  part.rs  part_uri.rs  relationships.rs
src/xml/: mod.rs  namespace.rs  raw.rs
tests/: document_api.rs  new_features.rs  open_docx.rs
tests/fixtures/: create_test_docx.py  simple.docx
