[package]
name = "linch-docx-rs"
version = "0.0.1-alpha.4"
edition = "2021"
authors = ["laofahai"]
description = "A reliable DOCX reading and writing library for Rust with round-trip preservation"
license = "MIT"
repository = "https://github.com/laofahai/linch-docx-rs"
homepage = "https://github.com/laofahai/linch-docx-rs"
documentation = "https://docs.rs/linch-docx-rs"
readme = "README.md"
keywords = ["docx", "word", "ooxml", "office", "document"]
categories = ["parser-implementations", "encoding"]
rust-version = "1.70"

[dependencies]
zip = "2.2"
quick-xml = "0.37"
thiserror = "2.0"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
env_logger = "0.11"
